# VideoDown_rust_src_DL-Omni

./: .gitignore  01base.md  04合并文件.py  README.md  build-all.mjs  package-lock.json  package.json  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.full.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  database.rs  lib.rs  main.rs  models.rs  state.rs  utils.rs
src-tauri/src/engine/: downloader.rs  mod.rs  sniffer.rs  updater.rs  ytdlp.rs
src-tauri/src/engine/scripts/: core.js
src-tauri/src/engine/scripts/adapters/: base.js  gdstudio.js
src/lib/api/: ipc.ts
src/lib/components/layout/: Sidebar.svelte  TitleBar.svelte
src/lib/components/ui/: Modal.svelte  ProgressBar.svelte
src/lib/stores/: config.svelte.ts  tasks.svelte.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/history/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/sniffer/: +page.svelte
